--- a/Lab4/pom.xml
+++ b/Lab4/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.0</version>
             <scope>test</scope>
-        </dependency>
+        </dependency
 
     </dependencies>
 </project>
